@@ -1,3 +1,10 @@
 Version 1.0
 ParentSets TestParent1
-TopLevels article cover category hidden publishtest
+TopLevels \
+        article \
+        cover \
+        category \
+        hidden \
+        publishtest \
+        cgi_story
+
